[package]
name = "rserve"
version = "0.1.1"
edition = "2021"
description = "rserve"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"                                 # 替换为最新版本号
actix-files = "0.6.2"
clap = { version = "4.4.1", features = ["derive"] }
