[package]
name = "rserve"
version = "0.1.9"
edition = "2021"
description = "rserve"
license = "MIT"
authors=["ahaoboy"]
repository="https://github.com/ahaoboy/rserve"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.7.0"                                 # 替换为最新版本号
actix-files = "0.6.5"
clap = { version = "4.5.6", features = ["derive"] }
local-ip-address = { version = "0.6.1" }
find_port = "0.1.0"
fast_qr = "0.12.5"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.15.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
